--- a/index.html
+++ b/index.html
@@ -8,6 +8,9 @@
     <title>Document</title>
   </head>
   <body>
-    <h1>Test</h1>
+    <div class="image01"><img src="img/dog_01.png" /></div>
+    <div class="image02"><img src="img/dog_02.png" /></div>
+    <div class="image03"><img src="img/dog_03.png" /></div>
+    <div class="image04"><img src="img/dog_04.png" /></div>
   </body>
 </html>
