--- a/index.html
+++ b/index.html
@@ -8,9 +8,20 @@
     <title>Document</title>
   </head>
   <body>
-    <div class="image01"><img src="img/dog_01.png" /></div>
-    <div class="image02"><img src="img/dog_02.png" /></div>
-    <div class="image03"><img src="img/dog_03.png" /></div>
-    <div class="image04"><img src="img/dog_04.png" /></div>
+    <div class="image01">
+      <img src="img/dog_01.png" alt="dog with glasses" />
+    </div>
+
+    <div class="image02">
+      <img src="img/dog_02.png" alt="cute dog" />
+    </div>
+
+    <div class="image03">
+      <img src="img/dog_03.png" alt="cute dog" />
+    </div>
+
+    <div class="image04">
+      <img src="img/dog_04.png" alt="cute dog" />
+    </div>
   </body>
 </html>
