--- a/index.html
+++ b/index.html
@@ -8,20 +8,22 @@
     <title>Document</title>
   </head>
   <body>
+      <h3>Image Gallery</h3>
+    <div id = "container">
     <div class="image01">
       <img src="img/dog_01.png" alt="dog with glasses" />
     </div>
-
     <div class="image02">
       <img src="img/dog_02.png" alt="cute dog" />
     </div>
-
     <div class="image03">
       <img src="img/dog_03.png" alt="cute dog" />
     </div>
-
     <div class="image04">
       <img src="img/dog_04.png" alt="cute dog" />
     </div>
+    
+</div>
+    </body>
   </body>
 </html>
