--- a/index.html
+++ b/index.html
@@ -8,22 +8,17 @@
     <title>Document</title>
   </head>
   <body>
-      <h3>Image Gallery</h3>
-    <div id = "container">
-    <div class="image01">
-      <img src="img/dog_01.png" alt="dog with glasses" />
+    <div class="container">
+      <div class="box1">
+        <div><img src="" alt="" /></div>
+      </div>
+      <div class="box2"></div>
+      <div class="box3"></div>
+      <div class="box4"></div>
+      <div class="box5"></div>
+      <div class="box6">
+        <img src="./img/table.png" alt="white-table" />
+      </div>
     </div>
-    <div class="image02">
-      <img src="img/dog_02.png" alt="cute dog" />
-    </div>
-    <div class="image03">
-      <img src="img/dog_03.png" alt="cute dog" />
-    </div>
-    <div class="image04">
-      <img src="img/dog_04.png" alt="cute dog" />
-    </div>
-    
-</div>
-    </body>
   </body>
 </html>
