--- a/index.html
+++ b/index.html
@@ -31,10 +31,14 @@
         <div><img src="/img/square/s-007.jpg" alt="" /></div>
         <div><img src="/img/square/s-008.jpg" alt="" /></div>
       </div>
-      <div class="box4"></div>
-      <div class="box5"></div>
-      <div class="box6">
-        <img src="./img/table.png" alt="white-table" />
+      <div class="box4">
+        <div><img src="/img/landscape/l-007.jpg" alt="" /></div>
+        <div><img src="./img/portrait/p-003.jpg" alt="" /></div>
+        <div><img src="/img/square/s-009.jpg" alt="" /></div>
+        <div><img src="/img/square/s-010.jpg" alt="" /></div>
+      </div>
+      <div class="box5">
+        <img src="./img/table.png" id="table" alt="white-table" />
       </div>
     </div>
   </body>
