--- a/index.html
+++ b/index.html
@@ -10,12 +10,12 @@
   <body>
     <div class="container">
       <div class="box1">
-        <div><img src="/img/landscape/l-001.jpg" alt="" /></div>
+        <div><img src="./img/landscape/l-001.jpg" alt="" /></div>
         <div><img src="./img/square/s-001.jpg" alt="" /></div>
         <div><img src="./img/landscape/l-002.jpg" alt="" /></div>
       </div>
       <div class="box2">
-        <div><img src="/img/landscape/l-003.jpg" alt="" /></div>
+        <div><img src="./img/landscape/l-003.jpg" alt="" /></div>
         <div><img src="./img/landscape/l-004.jpg" alt="" /></div>
         <div><img src="./img/square/s-002.jpg" alt="" /></div>
         <div><img src="./img/portrait/p-001.jpg" alt="" /></div>
@@ -23,16 +23,16 @@
         <div><img src="./img/landscape/l-005.jpg" alt="" /></div>
       </div>
       <div class="box3">
-        <div><img src="/img/landscape/l-006.jpg" alt="" /></div>
-        <div><img src="/img/square/s-003.jpg" alt="" /></div>
-        <div><img src="/img/square/s-004.jpg" alt="" /></div>
-        <div><img src="/img/square/s-005.jpg" alt="" /></div>
-        <div><img src="/img/square/s-006.jpg" alt="" /></div>
-        <div><img src="/img/square/s-007.jpg" alt="" /></div>
-        <div><img src="/img/square/s-008.jpg" alt="" /></div>
+        <div><img src="./img/landscape/l-006.jpg" alt="" /></div>
+        <div><img src="./img/square/s-003.jpg" alt="" /></div>
+        <div><img src="./img/square/s-004.jpg" alt="" /></div>
+        <div><img src="./img/square/s-005.jpg" alt="" /></div>
+        <div><img src="./img/square/s-006.jpg" alt="" /></div>
+        <div><img src="./img/square/s-007.jpg" alt="" /></div>
+        <div><img src="./img/square/s-008.jpg" alt="" /></div>
       </div>
       <div class="box4">
-        <div><img src="/img/landscape/l-007.jpg" alt="" /></div>
+        <div><img src="./img/landscape/l-007.jpg" alt="" /></div>
         <div><img src="./img/portrait/p-003.jpg" alt="" /></div>
         <div><img src="/img/square/s-009.jpg" alt="" /></div>
         <div><img src="/img/square/s-010.jpg" alt="" /></div>
