updated photo collection

--- a/index.html
+++ b/index.html
@@ -10,32 +10,30 @@
   <body>
     <div class="container">
       <div class="box1">
-        <div><img src="./img/landscape/l-001.jpg" alt="" /></div>
-        <div><img src="./img/square/s-001.jpg" alt="" /></div>
-        <div><img src="./img/landscape/l-002.jpg" alt="" /></div>
+        <div><img src="./img/img-01.png" alt="" /></div>
+        <div><img src="./img/img-02.png" alt="" /></div>
+        <div><img src="./img/img-03.png" alt="" /></div>
       </div>
       <div class="box2">
-        <div><img src="./img/landscape/l-003.jpg" alt="" /></div>
-        <div><img src="./img/landscape/l-004.jpg" alt="" /></div>
-        <div><img src="./img/square/s-002.jpg" alt="" /></div>
-        <div><img src="./img/portrait/p-001.jpg" alt="" /></div>
-        <div><img src="./img/portrait/p-002.jpg" alt="" /></div>
-        <div><img src="./img/landscape/l-005.jpg" alt="" /></div>
+        <div><img src="./img/img-04.png" alt="" /></div>
+        <div><img src="./img/img-05.png" alt="" /></div>
+        <div><img src="./img/img-06.png" alt="" /></div>
+        <div><img src="./img/img-07.png" alt="" /></div>
+        <div><img src="./img/img-08.png" alt="" /></div>
+        <div><img src="./img/img-09.png" alt="" /></div>
       </div>
       <div class="box3">
-        <div><img src="./img/landscape/l-006.jpg" alt="" /></div>
-        <div><img src="./img/square/s-003.jpg" alt="" /></div>
-        <div><img src="./img/square/s-004.jpg" alt="" /></div>
-        <div><img src="./img/square/s-005.jpg" alt="" /></div>
-        <div><img src="./img/square/s-006.jpg" alt="" /></div>
-        <div><img src="./img/square/s-007.jpg" alt="" /></div>
-        <div><img src="./img/square/s-008.jpg" alt="" /></div>
+        <div><img src="./img/img-10.png" alt="" /></div>
+        <div><img src="./img/img-11.png" alt="" /></div>
+        <div><img src="./img/img-12.png" alt="" /></div>
+        <div><img src="../img/img-13.png" alt="" /></div>
+        <div><img src="./img/img-14.png" alt="" /></div>
+        <div><img src="./img/img-15.png" alt="" /></div>
+        <div><img src="./img/img-16.png" alt="" /></div>
       </div>
       <div class="box4">
-        <div><img src="./img/landscape/l-007.jpg" alt="" /></div>
-        <div><img src="./img/portrait/p-003.jpg" alt="" /></div>
-        <div><img src="/img/square/s-009.jpg" alt="" /></div>
-        <div><img src="/img/square/s-010.jpg" alt="" /></div>
+        <div><img src="./img/img-17.png" alt="" /></div>
+        <div><img src="./img/img-18.png" alt="" /></div>
       </div>
       <div class="box5">
         <img src="./img/table.png" id="table" alt="white-table" />
