fixed minor issues

--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
         <div><img src="./img/img-10.png" alt="" /></div>
         <div><img src="./img/img-11.png" alt="" /></div>
         <div><img src="./img/img-12.png" alt="" /></div>
-        <div><img src="../img/img-13.png" alt="" /></div>
+        <div><img src="./img/img-13.png" alt="" /></div>
         <div><img src="./img/img-14.png" alt="" /></div>
         <div><img src="./img/img-15.png" alt="" /></div>
         <div><img src="./img/img-16.png" alt="" /></div>
